--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,13 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dio: ^5.4.3+1
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.1
+  http: ^1.2.1
+  permission_handler: ^11.3.1
   widget_mask: ^1.0.0+0
 
 dev_dependencies:
