--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,10 +32,13 @@ dependencies:
   dio: ^5.4.3+1
   flutter:
     sdk: flutter
+  fluttertoast: ^8.2.5
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.1
   http: ^1.2.1
+  newton_particles: ^0.1.7
   permission_handler: ^11.3.1
+  smooth_page_indicator: ^1.1.0
   widget_mask: ^1.0.0+0
 
 dev_dependencies:
@@ -75,9 +78,12 @@ flutter:
     - family: Acme
       fonts:
         - asset: assets\fonts\Acme-Regular.ttf
-    - family: Acme
+    - family: Heebo
       fonts:
         - asset: assets/fonts/Heebo-Regular.ttf
+    - family: Lobster
+      fonts:
+        - asset: assets\fonts\Lobster-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
