--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,19 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
   dio: ^5.4.3+1
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.5
   fluttertoast: ^8.2.5
   font_awesome_flutter: ^10.7.0
   go_router: ^13.2.1
   http: ^1.2.1
-  newton_particles: ^0.1.7
+  modal_progress_hud_nsn: ^0.5.1
   permission_handler: ^11.3.1
   smooth_page_indicator: ^1.1.0
   widget_mask: ^1.0.0+0
