--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,14 +32,19 @@ dependencies:
   carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
+  date_format: ^2.0.7
+  date_formatter: ^0.0.4
   dio: ^5.4.3+1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
   fluttertoast: ^8.2.5
   font_awesome_flutter: ^10.7.0
+  get_it: ^7.7.0
   go_router: ^13.2.1
   http: ^1.2.1
+ 
+  intl: 0.18.1
   modal_progress_hud_nsn: ^0.5.1
   permission_handler: ^11.3.1
   smooth_page_indicator: ^1.1.0
